[merossiot] MerossiotBridgeHandler initial development
Signed-off-by: Giovanni Fabiani <fabiani.giovanni@gmail.com>